--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon ./index.js"
-  },
+  "server": "nodemon index.js",
+  "start": "node index.js"
+},
   "author": "",
   "license": "ISC",
   "dependencies": {
