--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,13 +4,14 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-  "server": "nodemon index.js",
-  "start": "node index.js"
-},
+    "server": "nodemon index.js",
+    "start": "node index.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.15.1",
     "nodemon": "^3.1.10"
