--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://zaid:12345@cluster0.0ra3hzm.mongodb.net/contactInfo?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://zaid:Zaid%40123%21@cluster0.0ra3hzm.mongodb.net/
